Trabalho-Pratico-Compiladores/sintatico.output
Gramática

    0 $accept: programa $end

    1 programa: comandos

    2 comandos: comandos comando
    3         | ε

    4 comando: declaracao PONTO_E_VIRGULA
    5        | atribuicao PONTO_E_VIRGULA
    6        | bloco
    7        | print PONTO_E_VIRGULA
    8        | read PONTO_E_VIRGULA
    9        | if_stmt
   10        | while_stmt
   11        | error PONTO_E_VIRGULA

   12 declaracao: tipo atribuicao maisDecl
   13           | tipo IDENTIFICADOR maisDecl

   14 maisDecl: VIRGULA atribuicao maisDecl
   15         | VIRGULA IDENTIFICADOR maisDecl
   16         | ε

   17 tipo: TIPO_INT
   18     | TIPO_BOOL

   19 atribuicao: IDENTIFICADOR OP_ATRIBUICAO expr

   20 expr: expr MAIS expr
   21     | expr MENOS expr
   22     | expr MULT expr
   23     | expr DIV expr
   24     | expr MOD expr
   25     | expr OP_RELACIONAL expr
   26     | expr OP_LOGICO expr
   27     | NOT expr
   28     | MENOS expr
   29     | ABRE_PARENTESES expr FECHA_PARENTESES
   30     | IDENTIFICADOR
   31     | NUM_INTEIRO
   32     | NUM_INTEIRO_NEGATIVO
   33     | TRUE
   34     | FALSE
   35     | atribuicao

   36 bloco: ABRE_CHAVES comandos FECHA_CHAVES

   37 while_stmt: WHILE ABRE_PARENTESES expr FECHA_PARENTESES comando
   38           | WHILE error PONTO_E_VIRGULA

   39 if_stmt: IF ABRE_PARENTESES expr FECHA_PARENTESES comando ELSE comando
   40        | IF ABRE_PARENTESES expr FECHA_PARENTESES comando
   41        | IF error PONTO_E_VIRGULA

   42 read: READ ABRE_PARENTESES IDENTIFICADOR FECHA_PARENTESES

   43 print: PRINT ABRE_PARENTESES expr maisExpr FECHA_PARENTESES
   44      | PRINT ABRE_PARENTESES LITERAL maisExpr FECHA_PARENTESES

   45 maisExpr: VIRGULA expr maisExpr
   46         | VIRGULA LITERAL maisExpr
   47         | ε


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256) 11 38 41
    TIPO_INT (258) 17
    TIPO_BOOL (259) 18
    IF (260) 39 40 41
    ELSE (261) 39
    WHILE (262) 37 38
    PRINT (263) 43 44
    READ (264) 42
    TRUE (265) 33
    FALSE (266) 34
    IDENTIFICADOR (267) 13 15 19 30 42
    NUM_INTEIRO (268) 31
    NUM_INTEIRO_NEGATIVO (269) 32
    OP_ATRIBUICAO (270) 19
    OP_RELACIONAL (271) 25
    OP_LOGICO (272) 26
    NOT (273) 27
    ABRE_PARENTESES (274) 29 37 39 40 42 43 44
    FECHA_PARENTESES (275) 29 37 39 40 42 43 44
    ABRE_CHAVES (276) 36
    FECHA_CHAVES (277) 36
    PONTO_E_VIRGULA (278) 4 5 7 8 11 38 41
    VIRGULA (279) 14 15 45 46
    LITERAL (280) 44 46
    MAIS (281) 20
    MENOS (282) 21 28
    MULT (283) 22
    DIV (284) 23
    MOD (285) 24
    UMINUS (286)
    IF_SEM_ELSE (287)


Não terminais com as regras onde eles aparecem

    $accept (33)
        à esquerda: 0
    programa (34)
        à esquerda: 1
        à direita: 0
    comandos (35)
        à esquerda: 2 3
        à direita: 1 2 36
    comando (36)
        à esquerda: 4 5 6 7 8 9 10 11
        à direita: 2 37 39 40
    declaracao (37)
        à esquerda: 12 13
        à direita: 4
    maisDecl (38)
        à esquerda: 14 15 16
        à direita: 12 13 14 15
    tipo (39)
        à esquerda: 17 18
        à direita: 12 13
    atribuicao (40)
        à esquerda: 19
        à direita: 5 12 14 35
    expr (41)
        à esquerda: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
        à direita: 19 20 21 22 23 24 25 26 27 28 29 37 39 40 43 45
    bloco (42)
        à esquerda: 36
        à direita: 6
    while_stmt (43)
        à esquerda: 37 38
        à direita: 10
    if_stmt (44)
        à esquerda: 39 40 41
        à direita: 9
    read (45)
        à esquerda: 42
        à direita: 8
    print (46)
        à esquerda: 43 44
        à direita: 7
    maisExpr (47)
        à esquerda: 45 46 47
        à direita: 43 44 45 46


Estado 0

    0 $accept: • programa $end

    $padrão  reduzir usando a regra 3 (comandos)

    programa  ir ao estado 1
    comandos  ir ao estado 2


Estado 1

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    1 programa: comandos •
    2 comandos: comandos • comando

    error          deslocar, e ir ao estado 4
    TIPO_INT       deslocar, e ir ao estado 5
    TIPO_BOOL      deslocar, e ir ao estado 6
    IF             deslocar, e ir ao estado 7
    WHILE          deslocar, e ir ao estado 8
    PRINT          deslocar, e ir ao estado 9
    READ           deslocar, e ir ao estado 10
    IDENTIFICADOR  deslocar, e ir ao estado 11
    ABRE_CHAVES    deslocar, e ir ao estado 12

    $end  reduzir usando a regra 1 (programa)

    comando     ir ao estado 13
    declaracao  ir ao estado 14
    tipo        ir ao estado 15
    atribuicao  ir ao estado 16
    bloco       ir ao estado 17
    while_stmt  ir ao estado 18
    if_stmt     ir ao estado 19
    read        ir ao estado 20
    print       ir ao estado 21


Estado 3

    0 $accept: programa $end •

    $padrão  aceitar


Estado 4

   11 comando: error • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 22


Estado 5

   17 tipo: TIPO_INT •

    $padrão  reduzir usando a regra 17 (tipo)


Estado 6

   18 tipo: TIPO_BOOL •

    $padrão  reduzir usando a regra 18 (tipo)


Estado 7

   39 if_stmt: IF • ABRE_PARENTESES expr FECHA_PARENTESES comando ELSE comando
   40        | IF • ABRE_PARENTESES expr FECHA_PARENTESES comando
   41        | IF • error PONTO_E_VIRGULA

    error            deslocar, e ir ao estado 23
    ABRE_PARENTESES  deslocar, e ir ao estado 24


Estado 8

   37 while_stmt: WHILE • ABRE_PARENTESES expr FECHA_PARENTESES comando
   38           | WHILE • error PONTO_E_VIRGULA

    error            deslocar, e ir ao estado 25
    ABRE_PARENTESES  deslocar, e ir ao estado 26


Estado 9

   43 print: PRINT • ABRE_PARENTESES expr maisExpr FECHA_PARENTESES
   44      | PRINT • ABRE_PARENTESES LITERAL maisExpr FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 27


Estado 10

   42 read: READ • ABRE_PARENTESES IDENTIFICADOR FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 28


Estado 11

   19 atribuicao: IDENTIFICADOR • OP_ATRIBUICAO expr

    OP_ATRIBUICAO  deslocar, e ir ao estado 29


Estado 12

   36 bloco: ABRE_CHAVES • comandos FECHA_CHAVES

    $padrão  reduzir usando a regra 3 (comandos)

    comandos  ir ao estado 30


Estado 13

    2 comandos: comandos comando •

    $padrão  reduzir usando a regra 2 (comandos)


Estado 14

    4 comando: declaracao • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 31


Estado 15

   12 declaracao: tipo • atribuicao maisDecl
   13           | tipo • IDENTIFICADOR maisDecl

    IDENTIFICADOR  deslocar, e ir ao estado 32

    atribuicao  ir ao estado 33


Estado 16

    5 comando: atribuicao • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 34


Estado 17

    6 comando: bloco •

    $padrão  reduzir usando a regra 6 (comando)


Estado 18

   10 comando: while_stmt •

    $padrão  reduzir usando a regra 10 (comando)


Estado 19

    9 comando: if_stmt •

    $padrão  reduzir usando a regra 9 (comando)


Estado 20

    8 comando: read • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 35


Estado 21

    7 comando: print • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 36


Estado 22

   11 comando: error PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 11 (comando)


Estado 23

   41 if_stmt: IF error • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 37


Estado 24

   39 if_stmt: IF ABRE_PARENTESES • expr FECHA_PARENTESES comando ELSE comando
   40        | IF ABRE_PARENTESES • expr FECHA_PARENTESES comando

    TRUE                  deslocar, e ir ao estado 38
    FALSE                 deslocar, e ir ao estado 39
    IDENTIFICADOR         deslocar, e ir ao estado 40
    NUM_INTEIRO           deslocar, e ir ao estado 41
    NUM_INTEIRO_NEGATIVO  deslocar, e ir ao estado 42
    NOT                   deslocar, e ir ao estado 43
    ABRE_PARENTESES       deslocar, e ir ao estado 44
    MENOS                 deslocar, e ir ao estado 45

    atribuicao  ir ao estado 46
    expr        ir ao estado 47


Estado 25

   38 while_stmt: WHILE error • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 48


Estado 26

   37 while_stmt: WHILE ABRE_PARENTESES • expr FECHA_PARENTESES comando

    TRUE                  deslocar, e ir ao estado 38
    FALSE                 deslocar, e ir ao estado 39
    IDENTIFICADOR         deslocar, e ir ao estado 40
    NUM_INTEIRO           deslocar, e ir ao estado 41
    NUM_INTEIRO_NEGATIVO  deslocar, e ir ao estado 42
    NOT                   deslocar, e ir ao estado 43
    ABRE_PARENTESES       deslocar, e ir ao estado 44
    MENOS                 deslocar, e ir ao estado 45

    atribuicao  ir ao estado 46
    expr        ir ao estado 49


Estado 27

   43 print: PRINT ABRE_PARENTESES • expr maisExpr FECHA_PARENTESES
   44      | PRINT ABRE_PARENTESES • LITERAL maisExpr FECHA_PARENTESES

    TRUE                  deslocar, e ir ao estado 38
    FALSE                 deslocar, e ir ao estado 39
    IDENTIFICADOR         deslocar, e ir ao estado 40
    NUM_INTEIRO           deslocar, e ir ao estado 41
    NUM_INTEIRO_NEGATIVO  deslocar, e ir ao estado 42
    NOT                   deslocar, e ir ao estado 43
    ABRE_PARENTESES       deslocar, e ir ao estado 44
    LITERAL               deslocar, e ir ao estado 50
    MENOS                 deslocar, e ir ao estado 45

    atribuicao  ir ao estado 46
    expr        ir ao estado 51


Estado 28

   42 read: READ ABRE_PARENTESES • IDENTIFICADOR FECHA_PARENTESES

    IDENTIFICADOR  deslocar, e ir ao estado 52


Estado 29

   19 atribuicao: IDENTIFICADOR OP_ATRIBUICAO • expr

    TRUE                  deslocar, e ir ao estado 38
    FALSE                 deslocar, e ir ao estado 39
    IDENTIFICADOR         deslocar, e ir ao estado 40
    NUM_INTEIRO           deslocar, e ir ao estado 41
    NUM_INTEIRO_NEGATIVO  deslocar, e ir ao estado 42
    NOT                   deslocar, e ir ao estado 43
    ABRE_PARENTESES       deslocar, e ir ao estado 44
    MENOS                 deslocar, e ir ao estado 45

    atribuicao  ir ao estado 46
    expr        ir ao estado 53


Estado 30

    2 comandos: comandos • comando
   36 bloco: ABRE_CHAVES comandos • FECHA_CHAVES

    error          deslocar, e ir ao estado 4
    TIPO_INT       deslocar, e ir ao estado 5
    TIPO_BOOL      deslocar, e ir ao estado 6
    IF             deslocar, e ir ao estado 7
    WHILE          deslocar, e ir ao estado 8
    PRINT          deslocar, e ir ao estado 9
    READ           deslocar, e ir ao estado 10
    IDENTIFICADOR  deslocar, e ir ao estado 11
    ABRE_CHAVES    deslocar, e ir ao estado 12
    FECHA_CHAVES   deslocar, e ir ao estado 54

    comando     ir ao estado 13
    declaracao  ir ao estado 14
    tipo        ir ao estado 15
    atribuicao  ir ao estado 16
    bloco       ir ao estado 17
    while_stmt  ir ao estado 18
    if_stmt     ir ao estado 19
    read        ir ao estado 20
    print       ir ao estado 21


Estado 31

    4 comando: declaracao PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 4 (comando)


Estado 32

   13 declaracao: tipo IDENTIFICADOR • maisDecl
   19 atribuicao: IDENTIFICADOR • OP_ATRIBUICAO expr

    OP_ATRIBUICAO  deslocar, e ir ao estado 29
    VIRGULA        deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 16 (maisDecl)

    maisDecl  ir ao estado 56


Estado 33

   12 declaracao: tipo atribuicao • maisDecl

    VIRGULA  deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 16 (maisDecl)

    maisDecl  ir ao estado 57


Estado 34

    5 comando: atribuicao PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 5 (comando)


Estado 35

    8 comando: read PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 8 (comando)


Estado 36

    7 comando: print PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 7 (comando)


Estado 37

   41 if_stmt: IF error PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 41 (if_stmt)


Estado 38

   33 expr: TRUE •

    $padrão  reduzir usando a regra 33 (expr)


Estado 39

   34 expr: FALSE •

    $padrão  reduzir usando a regra 34 (expr)


Estado 40

   19 atribuicao: IDENTIFICADOR • OP_ATRIBUICAO expr
   30 expr: IDENTIFICADOR •

    OP_ATRIBUICAO  deslocar, e ir ao estado 29

    $padrão  reduzir usando a regra 30 (expr)


Estado 41

   31 expr: NUM_INTEIRO •

    $padrão  reduzir usando a regra 31 (expr)


Estado 42

   32 expr: NUM_INTEIRO_NEGATIVO •

    $padrão  reduzir usando a regra 32 (expr)


Estado 43

   27 expr: NOT • expr

    TRUE                  deslocar, e ir ao estado 38
    FALSE                 deslocar, e ir ao estado 39
    IDENTIFICADOR         deslocar, e ir ao estado 40
    NUM_INTEIRO           deslocar, e ir ao estado 41
    NUM_INTEIRO_NEGATIVO  deslocar, e ir ao estado 42
    NOT                   deslocar, e ir ao estado 43
    ABRE_PARENTESES       deslocar, e ir ao estado 44
    MENOS                 deslocar, e ir ao estado 45

    atribuicao  ir ao estado 46
    expr        ir ao estado 58


Estado 44

   29 expr: ABRE_PARENTESES • expr FECHA_PARENTESES

    TRUE                  deslocar, e ir ao estado 38
    FALSE                 deslocar, e ir ao estado 39
    IDENTIFICADOR         deslocar, e ir ao estado 40
    NUM_INTEIRO           deslocar, e ir ao estado 41
    NUM_INTEIRO_NEGATIVO  deslocar, e ir ao estado 42
    NOT                   deslocar, e ir ao estado 43
    ABRE_PARENTESES       deslocar, e ir ao estado 44
    MENOS                 deslocar, e ir ao estado 45

    atribuicao  ir ao estado 46
    expr        ir ao estado 59


Estado 45

   28 expr: MENOS • expr

    TRUE                  deslocar, e ir ao estado 38
    FALSE                 deslocar, e ir ao estado 39
    IDENTIFICADOR         deslocar, e ir ao estado 40
    NUM_INTEIRO           deslocar, e ir ao estado 41
    NUM_INTEIRO_NEGATIVO  deslocar, e ir ao estado 42
    NOT                   deslocar, e ir ao estado 43
    ABRE_PARENTESES       deslocar, e ir ao estado 44
    MENOS                 deslocar, e ir ao estado 45

    atribuicao  ir ao estado 46
    expr        ir ao estado 60


Estado 46

   35 expr: atribuicao •

    $padrão  reduzir usando a regra 35 (expr)


Estado 47

   20 expr: expr • MAIS expr
   21     | expr • MENOS expr
   22     | expr • MULT expr
   23     | expr • DIV expr
   24     | expr • MOD expr
   25     | expr • OP_RELACIONAL expr
   26     | expr • OP_LOGICO expr
   39 if_stmt: IF ABRE_PARENTESES expr • FECHA_PARENTESES comando ELSE comando
   40        | IF ABRE_PARENTESES expr • FECHA_PARENTESES comando

    OP_RELACIONAL     deslocar, e ir ao estado 61
    OP_LOGICO         deslocar, e ir ao estado 62
    FECHA_PARENTESES  deslocar, e ir ao estado 63
    MAIS              deslocar, e ir ao estado 64
    MENOS             deslocar, e ir ao estado 65
    MULT              deslocar, e ir ao estado 66
    DIV               deslocar, e ir ao estado 67
    MOD               deslocar, e ir ao estado 68


Estado 48

   38 while_stmt: WHILE error PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 38 (while_stmt)


Estado 49

   20 expr: expr • MAIS expr
   21     | expr • MENOS expr
   22     | expr • MULT expr
   23     | expr • DIV expr
   24     | expr • MOD expr
   25     | expr • OP_RELACIONAL expr
   26     | expr • OP_LOGICO expr
   37 while_stmt: WHILE ABRE_PARENTESES expr • FECHA_PARENTESES comando

    OP_RELACIONAL     deslocar, e ir ao estado 61
    OP_LOGICO         deslocar, e ir ao estado 62
    FECHA_PARENTESES  deslocar, e ir ao estado 69
    MAIS              deslocar, e ir ao estado 64
    MENOS             deslocar, e ir ao estado 65
    MULT              deslocar, e ir ao estado 66
    DIV               deslocar, e ir ao estado 67
    MOD               deslocar, e ir ao estado 68


Estado 50

   44 print: PRINT ABRE_PARENTESES LITERAL • maisExpr FECHA_PARENTESES

    VIRGULA  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 47 (maisExpr)

    maisExpr  ir ao estado 71


Estado 51

   20 expr: expr • MAIS expr
   21     | expr • MENOS expr
   22     | expr • MULT expr
   23     | expr • DIV expr
   24     | expr • MOD expr
   25     | expr • OP_RELACIONAL expr
   26     | expr • OP_LOGICO expr
   43 print: PRINT ABRE_PARENTESES expr • maisExpr FECHA_PARENTESES

    OP_RELACIONAL  deslocar, e ir ao estado 61
    OP_LOGICO      deslocar, e ir ao estado 62
    VIRGULA        deslocar, e ir ao estado 70
    MAIS           deslocar, e ir ao estado 64
    MENOS          deslocar, e ir ao estado 65
    MULT           deslocar, e ir ao estado 66
    DIV            deslocar, e ir ao estado 67
    MOD            deslocar, e ir ao estado 68

    $padrão  reduzir usando a regra 47 (maisExpr)

    maisExpr  ir ao estado 72


Estado 52

   42 read: READ ABRE_PARENTESES IDENTIFICADOR • FECHA_PARENTESES

    FECHA_PARENTESES  deslocar, e ir ao estado 73


Estado 53

   19 atribuicao: IDENTIFICADOR OP_ATRIBUICAO expr •
   20 expr: expr • MAIS expr
   21     | expr • MENOS expr
   22     | expr • MULT expr
   23     | expr • DIV expr
   24     | expr • MOD expr
   25     | expr • OP_RELACIONAL expr
   26     | expr • OP_LOGICO expr

    OP_RELACIONAL  deslocar, e ir ao estado 61
    OP_LOGICO      deslocar, e ir ao estado 62
    MAIS           deslocar, e ir ao estado 64
    MENOS          deslocar, e ir ao estado 65
    MULT           deslocar, e ir ao estado 66
    DIV            deslocar, e ir ao estado 67
    MOD            deslocar, e ir ao estado 68

    $padrão  reduzir usando a regra 19 (atribuicao)


Estado 54

   36 bloco: ABRE_CHAVES comandos FECHA_CHAVES •

    $padrão  reduzir usando a regra 36 (bloco)


Estado 55

   14 maisDecl: VIRGULA • atribuicao maisDecl
   15         | VIRGULA • IDENTIFICADOR maisDecl

    IDENTIFICADOR  deslocar, e ir ao estado 74

    atribuicao  ir ao estado 75


Estado 56

   13 declaracao: tipo IDENTIFICADOR maisDecl •

    $padrão  reduzir usando a regra 13 (declaracao)


Estado 57

   12 declaracao: tipo atribuicao maisDecl •

    $padrão  reduzir usando a regra 12 (declaracao)


Estado 58

   20 expr: expr • MAIS expr
   21     | expr • MENOS expr
   22     | expr • MULT expr
   23     | expr • DIV expr
   24     | expr • MOD expr
   25     | expr • OP_RELACIONAL expr
   26     | expr • OP_LOGICO expr
   27     | NOT expr •

    $padrão  reduzir usando a regra 27 (expr)


Estado 59

   20 expr: expr • MAIS expr
   21     | expr • MENOS expr
   22     | expr • MULT expr
   23     | expr • DIV expr
   24     | expr • MOD expr
   25     | expr • OP_RELACIONAL expr
   26     | expr • OP_LOGICO expr
   29     | ABRE_PARENTESES expr • FECHA_PARENTESES

    OP_RELACIONAL     deslocar, e ir ao estado 61
    OP_LOGICO         deslocar, e ir ao estado 62
    FECHA_PARENTESES  deslocar, e ir ao estado 76
    MAIS              deslocar, e ir ao estado 64
    MENOS             deslocar, e ir ao estado 65
    MULT              deslocar, e ir ao estado 66
    DIV               deslocar, e ir ao estado 67
    MOD               deslocar, e ir ao estado 68


Estado 60

   20 expr: expr • MAIS expr
   21     | expr • MENOS expr
   22     | expr • MULT expr
   23     | expr • DIV expr
   24     | expr • MOD expr
   25     | expr • OP_RELACIONAL expr
   26     | expr • OP_LOGICO expr
   28     | MENOS expr •

    $padrão  reduzir usando a regra 28 (expr)


Estado 61

   25 expr: expr OP_RELACIONAL • expr

    TRUE                  deslocar, e ir ao estado 38
    FALSE                 deslocar, e ir ao estado 39
    IDENTIFICADOR         deslocar, e ir ao estado 40
    NUM_INTEIRO           deslocar, e ir ao estado 41
    NUM_INTEIRO_NEGATIVO  deslocar, e ir ao estado 42
    NOT                   deslocar, e ir ao estado 43
    ABRE_PARENTESES       deslocar, e ir ao estado 44
    MENOS                 deslocar, e ir ao estado 45

    atribuicao  ir ao estado 46
    expr        ir ao estado 77


Estado 62

   26 expr: expr OP_LOGICO • expr

    TRUE                  deslocar, e ir ao estado 38
    FALSE                 deslocar, e ir ao estado 39
    IDENTIFICADOR         deslocar, e ir ao estado 40
    NUM_INTEIRO           deslocar, e ir ao estado 41
    NUM_INTEIRO_NEGATIVO  deslocar, e ir ao estado 42
    NOT                   deslocar, e ir ao estado 43
    ABRE_PARENTESES       deslocar, e ir ao estado 44
    MENOS                 deslocar, e ir ao estado 45

    atribuicao  ir ao estado 46
    expr        ir ao estado 78


Estado 63

   39 if_stmt: IF ABRE_PARENTESES expr FECHA_PARENTESES • comando ELSE comando
   40        | IF ABRE_PARENTESES expr FECHA_PARENTESES • comando
